--- a/client/package.json
+++ b/client/package.json
@@ -3,14 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "http://localhost:3000",
-  "proxy":"http://localhost:5000",
+  "proxy": "http://localhost:5000",
   "dependencies": {
+    "@brainhubeu/react-carousel": "^2.0.4",
     "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "d3": "^7.3.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
