--- a/client/package.json
+++ b/client/package.json
@@ -15,9 +15,11 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
+    "react-graph-vis": "^1.0.7",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-simple-maps": "^3.0.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
