--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "client/index.js",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.7.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "http-proxy-middleware": "^2.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
+    "react-graph-vis": "^1.0.7",
     "react-redux": "^7.2.6",
     "react-scripts": "^5.0.0",
+    "react-simple-maps": "^3.0.0",
     "web-vitals": "^2.1.3",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
@@ -22,7 +27,7 @@
   },
   "scripts": {
     "startsky": "concurrently \"cd backend && npm run start\" \"cd client && npm start\"",
-    "start":"node backend/server.js",
+    "start": "node backend/server.js",
     "develop": "concurrently \"cd backend && npm run watch\" \"cd client && npm start\"",
     "install": "cd backend && npm i && cd ../client && npm i",
     "build": "cd client && npm run build",
