--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "client/index.js",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.5",
     "body-parser": "^1.20.0",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.1",
@@ -18,6 +19,7 @@
     "react-redux": "^7.2.6",
     "react-scripts": "^5.0.0",
     "react-simple-maps": "^3.0.0",
+    "redux": "^4.2.0",
     "web-vitals": "^2.1.3",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
