--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "^5.0.0",
     "react-simple-maps": "^3.0.0",
     "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.3",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
