--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-simple-maps": "^3.0.0",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
+    "session": "^0.1.0",
     "web-vitals": "^2.1.3",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
