--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "http-proxy-middleware": "^2.0.1",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
     "react-chartjs-2": "^4.0.1",
