--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.25.0",
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "express-session": "^1.17.3",
     "mongoose": "^6.7.3",
     "nodemon": "^2.0.20"
   }
