--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "allowedhosts":"all",
   "engines": {
     "npm": "6.14.13",
     "node": "14.17.2"
