--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  "allowedhosts":"all",
+  "allowedhosts": "all",
   "engines": {
     "npm": "6.14.13",
     "node": "14.17.2"
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "mongoose": "^6.7.3",
+    "node-geocoder": "^4.2.0",
     "nodemon": "^2.0.20"
   }
 }
