--- a/client/.gitignore
+++ b/client/.gitignore
@@ -10,14 +10,14 @@
 
 # production
 /build
-
+hiddenvariable.js
 # misc
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-
+.env
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
