--- a/client/package.json
+++ b/client/package.json
@@ -12,17 +12,19 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "d3": "^7.3.0",
+    "dotenv": "^16.0.3",
     "google-maps-react": "^2.0.6",
     "immutable": "^4.1.0",
     "mapbox-gl": "^2.11.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
+    "react-dotenv": "^0.1.3",
     "react-graph-vis": "^1.0.7",
     "react-map-gl": "^7.0.20",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.1",
     "react-simple-maps": "^3.0.0",
     "react-switch": "^7.0.0",
     "redux-persist": "^6.0.0",
