--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.17.2",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.7.3",
     "node-geocoder": "^4.2.0",
     "nodemon": "^2.0.20"
