--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,13 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
     "d3": "^7.3.0",
     "dotenv": "^16.0.3",
     "google-maps-react": "^2.0.6",
     "immutable": "^4.1.0",
+    "jsonwebtoken": "^9.0.0",
     "mapbox-gl": "^2.11.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
