--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
     "react-graph-vis": "^1.0.7",
+    "react-icons": "^4.7.1",
     "react-map-gl": "^7.0.20",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
