--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,9 @@
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.3"
   },
+  "overrides": {
+    "autoprefixer": "10.4.5"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
