--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "client/index.js",
+  "engines": {
+    "node" : ">=18.0.0",
+    "npm" : ">=8.0.0"
+  },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
     "body-parser": "^1.20.1",
