--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "client/index.js",
   "dependencies": {
+    "@brainhubeu/react-carousel": "^2.0.4",
     "@reduxjs/toolkit": "^1.9.1",
     "body-parser": "^1.20.1",
     "bootstrap": "^5.2.3",
