--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "chart.js": "^3.7.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "haversine-distance": "^1.2.1",
     "http-proxy-middleware": "^2.0.1",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
@@ -19,6 +20,7 @@
     "react-graph-vis": "^1.0.7",
     "react-redux": "^7.2.6",
     "react-scripts": "^5.0.0",
+    "react-slider": "^2.0.4",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "session": "^0.1.0",
