--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,8 @@
     "react-scripts": "^5.0.1",
     "react-simple-maps": "^3.0.0",
     "react-slider": "^2.0.4",
+    "react-spring": "^9.6.1",
+    "react-spring-3d-carousel": "^1.3.2",
     "react-switch": "^7.0.0",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.3"
