--- a/app.yaml
+++ b/app.yaml
@@ -14,4 +14,11 @@
 env: flex
 runtime: nodejs
 
+manual_scaling:
+  instances: 1
+resources:
+  cpu: 1
+  memory_gb: 0.5
+  disk_size_gb: 10
+
 # [END app_yaml]
