--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "startsky": "concurrently \"cd backend && npm run start\" \"cd client && npm start\"",
     "start": "node backend/server.js",
     "develop": "concurrently \"cd backend && npm run watch\" \"cd client && npm start\"",
-    "install": "cd backend && npm i && cd ../client && npm i --legacy-peer-deps",
+    "install": "cd backend && npm i && cd ../client && npm i",
     "build": "cd client && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "type": "modules"
