--- a/backend/package.json
+++ b/backend/package.json
@@ -21,5 +21,8 @@
     "mongoose": "^6.7.3",
     "node-geocoder": "^4.2.0",
     "nodemon": "^2.0.20"
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.3.2"
   }
 }
