--- a/client/package.json
+++ b/client/package.json
@@ -66,5 +66,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.3.2"
   }
 }
