--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,12 +1,13 @@
- name: node:10.15.1
+steps:
+- name: node:10.15.1
   entrypoint: npm
   args: ["install"]
 - name: node:10.15.1
   entrypoint: npm
   args: ["run", "create-env"]
   env:
-    - 'MONGO_CONNECTION=${_GOOGLE_MAP_API_KEY}'
-    - 'REACT_APP_GOOGLE_MAPS_API=${_MONGO_CONNECTION}'
+    - 'MONGO_CONNECTION=${_MONGO_CONNECTION}'
+    - 'REACT_APP_GOOGLE_MAPS_API=${_GOOGLE_MAP_API_KEY}'
 - name: "gcr.io/cloud-builders/gcloud"
   args: ["app", "deploy"]
 timeout: "1600s"
