--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "install": "cd backend && npm i && cd ../client && npm i",
     "build": "cd client && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "type": "modules"
+    "type": "modules",
+    "create-env": "printenv > .env"
   },
   "keywords": [],
   "author": "",
