--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "client/index.js",
   "options": {
-    "allowedHosts": ["localhost", ".localhost"],
+    "allowedHosts": [
+      "localhost"
+    ],
     "proxy": "https://localhost:5000/"
   },
   "dependencies": {
