--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chart.js": "^3.9.1",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "html-react-parser": "^5.2.7",
     "http-proxy-middleware": "^2.0.6",
     "lodash": "^4.17.21",
     "node-geocoder": "^4.4.1",
